<resources>
    <string name="app_name">CourseProject</string>
    <string name="course_text_view">Course Name</string>
    <string name="course_total_fees_text_view">Course Total Fees</string>
    <string name="total_fees_button">TOTAL COURSE FEES</string>
    <string name="course_next_button">NEXT COURSE</string>
    <string name="course_detail_button">COURSE DETAIL</string>
    <string name="course_no_edit_text">Enter Course No</string>
    <string name="course_name_edit_text">Enter Course Name</string>
    <string name="course_max_enrl_edit_text">Enter Course Max Enrl</string>
    <string name="course_credits_edit_text">Enter Course Credits</string>
    <string name="course_update_button">COURSE UPDATE</string>
    <string name="course_list_text_view">Course List</string>
    <string name="course_start_service_button">START SERVICE</string>
    <string name="course_stop_service_button">STOP SERVICE</string>
    <string name="course_link_button">COURSE LINK</string>
    <string name="title_activity_course_maps">CourseMapsActivity</string>

    <string name="register_button">Register</string>
    <string name="login_button">Login</string>

    //Register and Login Activity
    <string name="email_edit_text">Email</string>
    <string name="password_edit_text">Password</string>
    <string name="register_user_button">Register</string>
    <string name="login_user_button">Login</string>

    <string name="logout_button">LOGOUT</string>
    <string name="write_to_firebase_button">WRITE TO FIREBASE</string>
    <string name="read_from_firebase_button">READ FROM FIREBASE</string>

    //Course Operation Activity
    <string name="operation_courseNo_edit_text"></string>
    <string name="operation_courseName_edit_text"></string>
    <string name="operation_maxEnrl_edit_text"></string>
    <string name="operation_courseCredits_edit_text"></string>
    <string name="operation_course_list_text_view">Course List</string>
    <string name="operation_add_course_button">ADD COURSE</string>
    <string name="operation_search_course_button">SEARCH COURSE</string>
</resources>